--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "bootstrap": "^3.3.4",
-    "react": "^0.13.3",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "browserify": "^7.0.3",
@@ -57,8 +57,8 @@
     "immutable": "^3.7.2",
     "keymirror": "^0.1.1",
     "lodash": "^3.9.1",
-    "react-bootstrap": "^0.22.5"
-
+    "react-bootstrap": "^0.22.5",
+    "fluxible": "^0.4.9"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start"
