--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
+    "body-parser": "^1.12.4",
     "browserify": "^7.0.3",
     "browserify-istanbul": "^0.1.2",
     "css-loader": "^0.12.1",
     "file-loader": "^0.8.1",
     "flow-typestrip": "latest",
+    "flux": "^2.0.3",
+    "fluxible": "^0.4.9",
+    "font-awesome": "^4.3.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
@@ -26,6 +30,8 @@
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "gulp-webpack": "^1.4.0",
+    "harmony": "^0.0.1",
+    "immutable": "^3.7.2",
     "istanbul": "^0.3.5",
     "istanbulify": "^0.1.0",
     "jasmine-core": "^2.1.3",
@@ -37,10 +43,14 @@
     "karma-jasmine": "^0.3.3",
     "karma-requirejs": "^0.2.2",
     "karma-webpack": "^1.5.1",
+    "keymirror": "^0.1.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
+    "lodash": "^3.9.1",
+    "minami": "^1.1.0",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.1.1",
+    "react-bootstrap": "^0.22.5",
     "react-tools": "^0.12.2",
     "reactify": "^0.17.1",
     "requirejs": "^2.1.15",
@@ -49,16 +59,7 @@
     "url-loader": "^0.5.5",
     "vinyl-named": "^1.1.0",
     "watchify": "^2.2.1",
-    "webpack": "^1.9.6",
-    "body-parser": "^1.12.4",
-    "flux": "^2.0.3",
-    "font-awesome": "^4.3.0",
-    "harmony": "^0.0.1",
-    "immutable": "^3.7.2",
-    "keymirror": "^0.1.1",
-    "lodash": "^3.9.1",
-    "react-bootstrap": "^0.22.5",
-    "fluxible": "^0.4.9"
+    "webpack": "^1.9.6"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start"
