--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-coverage": "0.2.6",
     "karma-electron-launcher": "0.0.1",
     "karma-jasmine": "^0.3.3",
+    "karma-jasmine-jquery": "^0.1.1",
     "karma-requirejs": "^0.2.2",
     "karma-webpack": "^1.5.1",
     "keymirror": "^0.1.1",
