--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "istanbul": "^0.3.5",
     "istanbulify": "^0.1.0",
     "jasmine-core": "^2.1.3",
+    "jasmine-react-helpers": "^0.2.2",
     "karma": "^0.12.31",
     "karma-browserify": "^2.0.0",
     "karma-chrome-launcher": "^0.1.7",
