--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.2",
     "url-loader": "^0.5.5",
+    "uuid": "^2.0.1",
     "vinyl-named": "^1.1.0",
     "watchify": "^2.2.1",
     "webpack": "^1.9.6"
