Update ESLint rules.

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
   "globals": {
     "describe": true,
     "it": true,
-    "expect": true
+    "expect": true,
+    "beforeEach": true,
+    "$j": true
   },
   "env": {
     "browser": true,
@@ -175,6 +177,7 @@
     "space-infix-ops": 2,            // http://eslint.org/docs/rules/space-infix-ops
     "space-return-throw-case": 2,    // http://eslint.org/docs/rules/space-return-throw-case
     "spaced-line-comment": 2,        // http://eslint.org/docs/rules/spaced-line-comment
+    "space-in-brackets": [2, "never"], // http://eslint.org/docs/rules/space-in-brackets
 
 /**
  * JSX style
