--- a/package.json
+++ b/package.json
@@ -1,83 +1,54 @@
 {
   "name": "electron-samples",
+  "productName": "Electron Samples",
   "version": "0.1.0",
   "description": "A sample application for Electron.",
-  "main": "./build/src/main.js",
-  "dependencies": {
-    "bootstrap-sass": "^3.3.4",
-    "react-bootstrap": "^0.22.5",
-    "font-awesome": "^4.3.0",
-    "jquery": "^2.1.4",
-    "fluxible": "^0.4.9",
-    "react": "^0.13.3",
-    "immutable": "^3.7.2",
-    "lodash": "^3.9.1",
-    "uuid": "^2.0.1"
-  },
-  "devDependencies": {
-    "body-parser": "^1.12.4",
-    "browserify": "^7.0.3",
-    "browserify-istanbul": "^0.1.2",
-    "css-loader": "^0.12.1",
-    "eslint": "^0.22.1",
-    "eslint-plugin-react": "^2.4.0",
-    "file-loader": "^0.8.1",
-    "flow-typestrip": "latest",
-    "flux": "^2.0.3",
-    "gulp": "^3.8.11",
-    "gulp-babel": "^5.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-changed": "^1.2.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-exec": "^2.1.1",
-    "gulp-flowtype": "^0.4.7",
-    "gulp-karma": "^0.0.4",
-    "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-react": "^3.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
-    "gulp-shell": "^0.4.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
-    "gulp-webpack": "^1.4.0",
-    "harmony": "^0.0.1",
-    "istanbul": "^0.3.5",
-    "istanbulify": "^0.1.0",
-    "jasmine-core": "^2.1.3",
-    "jasmine-react-helpers": "^0.2.2",
-    "karma": "^0.12.31",
-    "karma-browserify": "^2.0.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "0.2.6",
-    "karma-electron-launcher": "0.0.1",
-    "karma-jasmine": "^0.3.3",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-requirejs": "^0.2.2",
-    "karma-webpack": "^1.5.1",
-    "keymirror": "^0.1.1",
-    "less": "^2.5.0",
-    "less-loader": "^2.2.0",
-    "minami": "^1.1.0",
-    "node-libs-browser": "^0.5.0",
-    "node-sass": "^3.1.1",
-    "react-tools": "^0.12.2",
-    "reactify": "^0.17.1",
-    "requirejs": "^2.1.15",
-    "sass-loader": "^1.0.2",
-    "style-loader": "^0.12.2",
-    "url-loader": "^0.5.5",
-    "vinyl-named": "^1.1.0",
-    "watchify": "^2.2.1",
-    "webpack": "^1.9.6"
-  },
-  "scripts": {
-    "test": "./node_modules/karma/bin/karma start"
-  },
   "author": "Rui Tang <tangrui@zyeeda.com>",
   "contributors": [
     "Shusen Gu <gushusen@zyeeda.com",
     "Peipei Shu <shupeipei@zyeeda.com"
   ],
-  "license": "Apache License 2.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zyeeda/electron-samples"
+  },
+  "bugs": {
+    "url": "https://github.com/zyeeda/electron-samples/issues"
+  },
+  "license": "Apache-2.0",
+  "main": "./build/browser/main.js",
+  "dependencies": {
+    "babel": "^5.5.5",
+    "bootstrap-sass": "^3.3.4",
+    "bunyan": "^1.4.0",
+    "fluxible": "^0.4.10",
+    "font-awesome": "^4.3.0",
+    "immutable": "^3.7.3",
+    "jquery": "^2.1.4",
+    "lodash": "^3.9.3",
+    "react": "^0.13.3",
+    "react-bootstrap": "^0.23.1",
+    "uuid": "^2.0.1",
+    "yargs": "^3.10.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^3.1.14",
+    "electron-prebuilt": "^0.27.2",
+    "electron-rebuild": "^0.2.2",
+    "eslint-plugin-react": "^2.5.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-eslint": "^0.13.2",
+    "gulp-flowtype": "^0.4.7",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "season": "^5.2.0"
+  },
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start"
+  }
 }
