--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "Apache-2.0",
   "main": "./build/browser/main.js",
   "dependencies": {
-    "babel": "^5.5.5",
+    "babel": "^5.5.6",
     "bootstrap-sass": "^3.3.4",
     "bunyan": "^1.4.0",
     "fluxible": "^0.4.10",
@@ -28,13 +28,13 @@
     "jquery": "^2.1.4",
     "lodash": "^3.9.3",
     "react": "^0.13.3",
-    "react-bootstrap": "^0.23.1",
+    "react-bootstrap": "^0.23.2",
     "uuid": "^2.0.1",
     "yargs": "^3.10.0"
   },
   "devDependencies": {
-    "babel-eslint": "^3.1.14",
-    "electron-prebuilt": "^0.27.2",
+    "babel-eslint": "^3.1.15",
+    "electron-prebuilt": "^0.27.3",
     "electron-rebuild": "^0.2.2",
     "eslint-plugin-react": "^2.5.0",
     "gulp": "^3.9.0",
@@ -47,7 +47,9 @@
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
-    "season": "^5.2.0"
+    "jasmine": "^2.3.1",
+    "jasmine-core": "^2.3.4",
+    "season": "^5.3.0"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start"
