--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^3.9.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.2",
+    "season": "^5.3.0",
     "uuid": "^2.0.1",
     "yargs": "^3.10.0"
   },
@@ -48,9 +49,11 @@
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "jasmine": "^2.3.1",
-    "season": "^5.3.0"
+    "jasmine-expect": "^2.0.0-beta1",
+    "jasmine-jquery-matchers": "^0.1.1"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start"
+    "start": "./node_modules/.bin/electron . -d -l info | ./node_modules/.bin/bunyan",
+    "test": "./node_modules/.bin/electron . -d -t -l info | ./node_modules/.bin/bunyan"
   }
 }
