--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.13.2",
     "gulp-flowtype": "^0.4.7",
+    "gulp-jsinspect": "^1.0.1",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.1",
